# ros-data-capture

./: .gitignore  README.rst
audio_capture2/: CMakeLists.txt  package.xml
audio_capture2/launch/: capture.launch
audio_capture2/scripts/: capture.py
aws_uploader/: package.xml
aws_uploader/config/: config.yaml
aws_uploader/launch/: aws_uploader.launch  aws_uploader.test
aws_uploader/src/aws_uploader/: aws_file_uploader.py
aws_uploader/tests/: test_aws_file_uploader.py
data_capture/: package.xml
src/data_capture/audio_capture2/config/: configuration.yaml
src/data_capture/audio_capture2/launch/: capture.launch
src/data_capture/audio_capture2/scripts/: audio_clean.py  capture.py
src/data_capture/data_capture/: CMakeLists.txt
src/data_capture/video_capture/: CMakeLists.txt  README.md  setup.py
src/data_capture/video_capture/config/: configuration.yaml  webcam_config.yaml
src/data_capture/video_capture/launch/: capture.launch  image_publisher.launch  webcam_capture.launch
src/data_capture/video_capture/scripts/: capture.py  image_publisher.py  image_writer.py
src/data_capture/video_capture/src/image_capture/: __init__.py
src/data_capture/video_capture/src/video_recorder/: __init__.py
src/tools/aws_uploader/: CMakeLists.txt  setup.py
src/tools/aws_uploader/config/: config.yaml
src/tools/aws_uploader/scripts/: directory_uploader.py
src/tools/aws_uploader/src/aws_uploader/: aws_file_uploader.py
src/tools/directory_size_manager/: package.xml  setup.py
src/tools/directory_size_manager/config/: config.yaml
src/tools/directory_size_manager/launch/: directory_size_manager.launch
src/tools/directory_size_manager/scripts/: manager.py
src/tools/directory_size_manager/src/directory_size_manager/: __init__.py
src/tools/directory_size_manager/tests/: test_directory_size_manager.py
src/tools/mem_use_watcher/: CMakeLists.txt  package.xml  setup.py
src/tools/mem_use_watcher/launch/: mem_use_watcher.launch
src/tools/mem_use_watcher/scripts/: repeated_timer.py  watcher.py
src/tools/mem_use_watcher/tests/: README.md
video_capture/: package.xml  setup.py
video_capture/config/: config.yaml
video_capture/launch/: capture.launch
video_capture/scripts/: capture.py
video_capture/src/video_recorder/: __init__.py
