<?xml version="1.0"?>
<package format="2">

  <name>directory_size_manager</name>
  <version>0.0.0</version>
  <description>The directory_size_manager package</description>
  <maintainer email="audrow.nash@gmail.com">Audrow Nash</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <test_depend>rostest</test_depend>
  <test_depend>fallocate</test_depend>

</package>
